# codecanvas

./: .gitignore  .mcp.json  AGENTS.md  RUNTASKS.md  pyproject.toml  tasks.yaml
.agents/: SKILLS.md
.agents/context/: code.visualstudio.com_api.2025-11-09T17_57_09.645Z.md  cognition.ai_blog_codemaps.2025-11-09T17_53_34.137Z.md
.agents/review/: metrics.md
.agents/specs/: 2025-12-12-codecanvas-overview-execution-flow-map.md  2025-12-12-codecanvas-v3-superset-of-crabviz-depviz.md  2025-12-14-locagent-mcp-tool-optimization-for-agent-usability.md  2025-12-16-codecanvas-v6-lsp-powered-universal-call-graph.md  2025-12-20-hooks-that-actually-do-things.md  2025-12-22-codecanvas-specific-analytics-layer.md  2025-12-26-codecanvas-hooks-mcp-under-triggering-complete-fix-spec.md  2025-12-27-parallelize-multilspy-lsp-warmup.md  2025-12-29-fix-call-graph-parallelize-lsp-calls-clean-up-broken-changes.md  2026-01-08-option-b-contains-edges-class-module-impact-aggregation.md  2026-01-12-codecanvas-autocontext-hooks-v2-deterministic-stateful-low-noise.md  2026-01-13-cython-lsp-support-strategy.md  2026-01-13-lsp-warmup-nonblocking-and-fast.md  2026-01-13-tb-first-root-external-artifacts-per-language-lsp-warmup-full-scan.md  2026-01-15-remove-build-time-warmup-keep-robust-warmup-clean-custom-lsp-bootstrapping.md  2026-01-16-live-low-overhead-call-graph-refresh.md  2026-01-16-option-c-persistent-process-without-breaking-hook-driven-ux.md  2026-01-20-clean-fix-atomic-snapshot-publication-for-codecanvas-artifacts.md  2026-01-20-merkle-tree-based-graph-coherence-derived-artifact-caching-implementation-ready.md  2026-01-21-ensure-results-batch-canvas-mirrors-even-if-ui-cli-is-interrupted.md  2026-01-21-reduce-dead-space-in-view-pngs-for-small-graphs.md  2026-01-22-improve-dirty-json-update-semantics.md  2026-01-22-terminalbench-experiment-tomls-new-runner-option-b-delete-legacy-cli-scripts.md  2026-01-23-experiment-toml-v2-analytics-ux-mixed-datasets-map-style-profiles-no-legacy-supp.md  2026-01-23-experiment-toml-v2-analytics-ux.md  2026-01-23-fix-harbor-job-collisions-true-mixed-dataset-runs-single-harbor-job-per-profile.md  2026-01-25-fix-missing-profiles-in-600s-runs-it-s-scheduling-timeout.md  2026-01-25-post-mortem-fix-plan-600s-run-incomplete-missing-index-analytics.md
.factory/review/: BACKEND.md  crabviz.md  depviz.md
.factory/specs/: 2025-12-09-codecanvas-static-impact-analysis-for-llm-side-effect-blindness.md  2025-12-09-codecanvas-v3-focused-layout-true-scratchpad-multi-target.md  2025-12-09-terminalbench-harness-plan.md  2025-12-10-codecanvas-dead-code-cleanup.md  2025-12-10-locagent-mcp-re-implementation-evaluation.md  2025-12-10-locagent-mcp-server-complete-backend-integration-tool-implementation.md  2025-12-10-locagent-mcp-server-extraction-spec.md  2025-12-12-terminalbench-harbor-migration.md  2025-12-12-terminalbench-ux-improvements.md  2025-12-15-reduce-harbor-rebuild-churn-and-support-parallel-mcp-no-mcp-runs-in-terminalbenc.md  2025-12-16-research-paper-analysis-llm-agent-evaluation-metrics.md  2025-12-16-terminalbench-analytics-v2-hybrid-sota.md  2025-12-19-codecanvas-blazing-fast-lsp-backend-revamp.md  2025-12-19-codecanvas-lsp-tree-sitter-backbone-call-graph-and-naive-deletion.md  2025-12-20-codecanvas-agent-ux-overhaul-mcp-hooks.md  2025-12-26-codecanvas-harbor-dependencies-lsp-path-resolution-complete-fix.md  2025-12-26-harbor-multi-language-lsp-installation.md  2025-12-26-migrate-codecanvas-lsp-to-microsoft-multilspy.md  2025-12-26-multi-batch-results-directory-support.md  2025-12-26-replace-per-language-tree-sitter-modules-with-a-single-treesitter-py.md  2025-12-27-principled-lsp-warmup-profile-aware-language-detection.md  2025-12-29-fix-call-graph-race-condition-wait-for-background-thread.md  2026-01-13-durable-autocontext-init-with-lsp-warmup-bounded-retries.md  2026-01-13-lsp-warmup-spawn-gating.md  2026-01-16-diagnose-missing-impact-pngs-via-old-commit-spec-propose-next-steps.md  2026-01-16-fix-missing-state-impact-artifacts-hook-concurrency-atomic-state-writes.md  2026-01-18-stabilize-codecanvas-artifact-syncing-atomic-state-lock-discipline.md  REVAMP_NOTES.md
.factory/todo/: 2025-12-23-pass-k-support-for-terminalbench.md
codecanvas/: .mcp.json  USAGE.md  __init__.py  cli.py  hooks.json  mcp_server.py  server.py
codecanvas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
codecanvas/analysis/: __init__.py  impact.py  test_mapper.py
codecanvas/core/: __init__.py  analysis.py  graph.py  graph_meta.py  lock.py  models.py  parser.py  paths.py  refresh.py  snapshot.py  state.py
codecanvas/hooks/: __init__.py  _autocontext_state.py  _hookio.py  _workspace.py  auto_init.py  autocontext.py  hooks.json  lsp_warmup.py  post_read.py  session_init.py
codecanvas/parser/: __init__.py  call_graph.py  config.py  lsp.py  lsp_runtime.py  lsp_session.py  main.py  treesitter.py  util.py  utils.py  workspace.py
codecanvas/scratchpad/: __init__.py  canvas.py  checklist.py
codecanvas/tests/: __init__.py  analysis.py  api.py  autocontext_hooks.py  call_graph.py  geometry.py  graph_meta.py  parser.py  paths_and_lsp_langs.py  refresh.py  treesitters.py  workspace.py
codecanvas/views/: __init__.py  architecture.py  geometry.py  impact.py  svg.py  task.py
codecanvas/visualization/: __init__.py  renderer.py
context/: ChatGPT-Leveraging_Mangle_for_VSCode.md  PAPER.md  docs.windsurf.com_windsurf_codemaps.2025-11-09T17_55_40.132Z.md
docs/: CODECANVAS.md  EVALTASKS.md  LOCAGENT.md  TERMINALBENCH.md
docs/usage/: RUNANALYTICS.md  RUNTASKS.md
experiments/: tb2-core7__t-cg-cc__haiku45-low.toml
locagent/: .mcp.json  USAGE.md  __init__.py  server.py  state.py
paper/: README.md  algorithm.sty  algpseudocode.sty  cvpr.sty  main.tex  preamble.tex  references.bib
runs/: index.json  run.pid
scripts/: kill-experiment.sh  run-experiment.sh
terminalbench/: __init__.py  agents.py  cli.py  config.py  display.py  harbor_agent.py  install-claude-code-mcp.sh.j2  runner.py  tasks.py
tests/: __init__.py  test_canvas.py  test_graph.py  test_parser.py
(+190 files in other folders)
