[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codecanvas"
version = "0.7.0"
description = "Impact analysis for LLM agents - track code dependencies and side-effects"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ainesh Chatterjee"}
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["llm", "code-analysis", "impact-analysis", "static-analysis"]

dependencies = [
    "CairoSVG>=2.7.1",
    "pyyaml>=6.0",
    "lsprotocol>=2024.0.0",
    "basedpyright>=1.36.1",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6.0",
]
mcp = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]
terminalbench = [
    "rich>=13.0",
    "litellm>=1.0.0",
]

# Optional deps for running LocAgent MCP in the top-level venv.
locagent = [
    "mcp>=1.0.0",
    "networkx>=3.0.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.13.0",
    "bm25s>=0.2.0",
    "libcst>=1.0.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "tqdm>=4.60.0",
    "llama-index-core>=0.11.0",
    "llama-index-readers-file>=0.4.0",
    "llama-index-retrievers-bm25>=0.4.0",
    "rapidfuzz>=3.0.0",
    "matplotlib>=3.0.0",
    "pydot>=2.0.0",
    "PyStemmer>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ainesh/codecanvas"

[tool.setuptools.packages.find]
where = ["."]
include = ["codecanvas*", "locagent*"]

[tool.setuptools.package-data]
"locagent.core.repo_index.codeblocks.parser.queries" = ["*.scm"]

[tool.pytest.ini_options]
testpaths = ["codecanvas/tests"]
python_files = ["*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "pyright>=1.1.407",
]
